--- a/index.html
+++ b/index.html
@@ -59,6 +59,90 @@
                 </div>
             </div>
         </section>
+        <section class="skills">
+            <h3 class="skils-title text-center">What I do</h3>
+            <p class="skills-description text-center">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="./images/icons/js.png" alt="JS">
+                    <h4 class="skill-title">Vanilla JavaScript</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="./images/icons/react.png" alt="React">
+                    <h4 class="skill-title">React</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="./images/icons/nodejs.png" alt="NodeJs">
+                    <h4 class="skill-title">Node.js</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="./images/icons/mongo.png" alt="MongoDB">
+                    <h4 class="skill-title">MongoDB</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div> 
+
+        </section>
+        <section class="resume">
+            <div class="resume-container">
+                    <div class="resume-colum">
+                    <h2 class="resume-tile">My Education</h2>
+                    <div class="experience">
+                        <h3 class="experience-title">Master in Computer Engineering</h3>
+                        <h5 class="experience-sub-title ">Harvard University / 2015 - 2017</h5>
+                        <p class="experience-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h3 class="experience-title">Master in Computer Engineering</h3>
+                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="experience-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h3 class="experience-title">Master in Computer Engineering</h3>
+                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="experience-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. </p>
+                    </div>
+                    <hr>
+                </div>
+                <div class="resume-colum">
+                    <h2 class="resume-tile">My Experience</h2>
+                    <div class="experience">
+                        <h3 class="experience-title">Sr. Font End Developer</h3>
+                        <h5 class="experience-sub-title">Apple Inc / 2020 - Current</h5>
+                        <p class="experience-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h3 class="experience-title">Sr. Font End Developer</h3>
+                        <h5 class="experience-sub-title">Apple Inc / 2020 - Current</h5>
+                        <p class="experience-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h3 class="experience-title">Sr. Font End Developer</h3>
+                        <h5 class="experience-sub-title">Apple Inc / 2020 - Current</h5>
+                        <p class="experience-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                </div>
+            </div>
+            <div class="text-center">
+                <button class="btn-primary text-center">Download CV</button>
+            </div>
+           
+        </section>
+        
     </main>
 
     <footer>
